# labs_1st_term

./: 4.7.A.cpp  4.7.A.h  4.7.B.cpp  5.7.cpp  6.7.cpp  6.cpp  CMakeLists.txt  CorrectFraction.cpp  lab3.7.cpp  lab_1.7.cpp  lab_2.7.cpp  main.cpp  main.h  tests.h  tests4.7.h
2ndLab/: lab_2.7.cpp
7Lab/: Student.cpp  Student.h  StudentAfter1Session.cpp  StudentAfter1Session.h  StudentAfter2Session.cpp  StudentAfter2Session.h  functions.cpp  functions.h  main.cpp  student.cpp  student.h  tests.cpp
8Lab/: Calc.cpp  Calc.h  Stack.cpp  Stack.h  Tests.cpp  main.cpp
fifth_lab_var7/: CMakeLists.txt
fourth_lab_v7/: 4.7.B.h  main4.6.cpp
second_lab_var7/: lab_2.7.cpp
sixth_lab/: CorrectFraction.h  tests.cpp
third_lab_var7/: lab3.7.cpp
